# SnipDocs-updates

./: config.json  pyproject.toml  version.json
snipdocs/: __init__.py  config_loader.py  schema_validator.py  version_manager.py
tests/: test_config_loader.py  test_schema_validator.py  test_version_manager.py
