[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snipdocs-updates"
version = "0.1.0"
description = "Utilities for managing SnipDocs configuration and versioning"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["snipdocs"]
